@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="net.yura.domination"
-      android:versionCode="8"
-      android:versionName="8"
+      android:versionCode="9"
+      android:versionName="9"
       android:installLocation="preferExternal">
       
     <!-- android:targetSdkVersion needs to be 11 to hide the legacy menu button -->
